--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,15 @@ body { font-size: 16px;}
   max-width: 375px;
   align-self: center;
 }
+
+/* inline SVG css styles */
+
+#badge {
+  cursor: pointer;
+  width: 30%;
+}
+
+.st0:hover {
+  opacity: 1;
+  fill: #ffffff;
+}
